// Auto-generated from live PostgreSQL schema
// Paste this entire block at https://dbdiagram.io/d to render the diagram

Table tbl_acc_status {
  acc_status_id integer [pk]
  acc_status character varying(100) [not null]
}

Table tbl_action_admin {
  user_id integer [not null]
  project_id character varying(100)
  role_id integer [not null]
  edit_date date [not null, default: `CURRENT_DATE`]
  edit_time timestamp without time zone [not null, default: `now()`]
  id bigint [pk, default: `nextval('tbl_action_admin_id_seq'::regclass)`]
  action_type character varying(40)
  target_type character varying(20)
  target_id integer
  change_json jsonb
}

Table tbl_audit_log {
  user_id integer
  log_in_date date [not null, default: `CURRENT_DATE`]
  log_in_time timestamp without time zone [not null, default: `now()`]
  log_out_date date
  log_out_time timestamp without time zone
  id bigint [pk, default: `nextval('tbl_audit_log_id_seq'::regclass)`]
  event_type character varying(20)
  detail jsonb
  ip character varying(45)
}

Table tbl_balance {
  project_id character varying(100) [pk]
  project_credits numeric [not null, default: `0`]
  top_up_date date [not null, default: `CURRENT_DATE`]
  top_up_time timestamp without time zone [not null, default: `now()`]
  user_id integer [not null]
}

Table tbl_chat_message {
  message_id bigint [pk, default: `nextval('tbl_chat_message_message_id_seq'::regclass)`]
  session_id bigint [not null]
  role character varying(16) [not null]
  content text [not null]
  created_at timestamp with time zone [not null, default: `now()`]
  input_tokens integer
  output_tokens integer
  cost numeric
  model character varying(64)
  skill_id character varying(64)
}

Table tbl_chat_session {
  session_id bigint [pk, default: `nextval('tbl_chat_session_session_id_seq'::regclass)`]
  user_id integer [not null]
  title character varying(200) [not null, default: `'New chat'::character varying`]
  created_at timestamp with time zone [not null, default: `now()`]
  updated_at timestamp with time zone [not null, default: `now()`]
  is_deleted boolean [not null, default: `false`]
  message_count integer [not null, default: `0`]
  total_cost numeric [not null, default: `0`]
}

Table tbl_credits {
  user_id integer [pk]
  project_id character varying(100) [not null]
  user_credits numeric [not null, default: `0`]
}

Table tbl_daily_token {
  usage_date_th date [pk]
  project_id character varying(100) [not null]
  start_time_th bigint [not null]
  end_time_th bigint [not null]
  start_time_utc bigint [not null]
  end_time_utc bigint [not null]
  model character varying(20) [not null]
  input_tokens integer [not null, default: `0`]
  output_tokens integer [not null, default: `0`]
  input_cached_tokens integer [not null, default: `0`]
  input_uncached_tokens integer [not null, default: `0`]
  input_text_tokens integer [not null, default: `0`]
  output_text_tokens integer [not null, default: `0`]
  input_cached_text_tokens integer [not null, default: `0`]
  input_audio_tokens integer [not null, default: `0`]
  input_cached_audio_tokens integer [not null, default: `0`]
  output_audio_tokens integer [not null, default: `0`]
  input_image_tokens integer [not null, default: `0`]
  output_image_tokens integer [not null, default: `0`]
}

Table tbl_project {
  project_id character varying(100) [pk]
  project_name character varying(100) [not null]
  project_api_key text
  admin_api_key text
  created_date date [not null, default: `CURRENT_DATE`]
  description text [default: `''::text`]
  input_rate numeric [default: `0.50`]
  output_rate numeric [default: `1.50`]
  credit_limit numeric [default: `0`]
  is_deleted boolean [not null, default: `false`]
  deleted_at timestamp with time zone
  openai_project_id character varying(64)
  openai_service_account_id character varying(64)
  openai_synced_at timestamp with time zone
  cached_input_rate numeric [default: `0.25`]
}

Table tbl_response {
  response_id character varying(255) [pk]
  project_id character varying(100) [not null]
  model character varying(20) [not null]
  created_at timestamp without time zone [not null, default: `now()`]
  input_param text [not null, default: `''::text`]
  output_param text [not null, default: `''::text`]
  input_tokens integer [not null, default: `0`]
  input_cached_tokens integer [not null, default: `0`]
  output_tokens integer [not null, default: `0`]
  output_reasoning_tokens integer [not null, default: `0`]
  total_tokens integer [not null, default: `0`]
  user_id integer
}

Table tbl_session {
  token character varying(128) [pk]
  user_id integer [not null]
  role character varying(32) [not null]
  expires_at timestamp with time zone [not null]
  created_at timestamp with time zone [not null, default: `now()`]
  last_seen_at timestamp with time zone [not null, default: `now()`]
  csrf_token character varying(64)
}

Table tbl_topup_history {
  id bigint [pk, default: `nextval('tbl_topup_history_id_seq'::regclass)`]
  project_id character varying(64) [not null]
  user_id integer [not null]
  amount numeric [not null]
  balance_before numeric [not null]
  balance_after numeric [not null]
  note text
  created_at timestamp with time zone [not null, default: `now()`]
}

Table tbl_user {
  user_id integer [pk, default: `nextval('tbl_user_user_id_seq'::regclass)`]
  project_id character varying(100)
  role_id integer [not null]
  username character varying(100) [not null]
  password character varying(255) [not null]
  name character varying(50) [not null]
  surname character varying(50) [not null, default: `''::character varying`]
  created_date date [not null, default: `CURRENT_DATE`]
  acc_status_id integer [not null]
  is_deleted boolean [not null, default: `false`]
  deleted_at timestamp with time zone
  failed_attempts integer [not null, default: `0`]
  locked_until timestamp with time zone
  must_change_password boolean [not null, default: `false`]
  daily_cap numeric
}

Table tbl_user_role {
  role_id integer [pk]
  role_des character varying(100) [not null]
}


// === Foreign keys ===
Ref: tbl_user.role_id > tbl_user_role.role_id
Ref: tbl_user.acc_status_id > tbl_acc_status.acc_status_id
Ref: tbl_user.project_id > tbl_project.project_id // ON UPDATE CASCADE, ON DELETE NO ACTION
Ref: tbl_chat_message.session_id > tbl_chat_session.session_id // ON UPDATE NO ACTION, ON DELETE CASCADE
Ref: tbl_balance.project_id > tbl_project.project_id // ON UPDATE CASCADE, ON DELETE NO ACTION
Ref: tbl_credits.user_id > tbl_user.user_id
Ref: tbl_credits.project_id > tbl_balance.project_id // ON UPDATE CASCADE, ON DELETE NO ACTION
Ref: tbl_audit_log.user_id > tbl_user.user_id
Ref: tbl_action_admin.user_id > tbl_user.user_id
Ref: tbl_session.user_id > tbl_user.user_id // ON UPDATE NO ACTION, ON DELETE CASCADE
Ref: tbl_chat_session.user_id > tbl_user.user_id // ON UPDATE NO ACTION, ON DELETE CASCADE
Ref: tbl_topup_history.project_id > tbl_project.project_id // ON UPDATE CASCADE, ON DELETE NO ACTION
Ref: tbl_topup_history.user_id > tbl_user.user_id
Ref: tbl_response.user_id > tbl_user.user_id // ON UPDATE NO ACTION, ON DELETE SET NULL
Ref: tbl_response.project_id > tbl_project.project_id // ON UPDATE CASCADE, ON DELETE NO ACTION
